--- a/index.html
+++ b/index.html
@@ -7,34 +7,36 @@
 <style>
   body {
     font-family: Arial, sans-serif;
-    background: #f5f5f5;
+    background: #f2f2f2;
   }
 
   #game-wrapper {
-    width: 620px;
+    width: 640px;
     margin: 20px auto;
-    background: #fff;
-    padding: 10px;
-    border-radius: 10px;
+    background: #ffffff;
+    padding: 12px;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   }
 
   #task {
     text-align: center;
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 8px;
   }
 
   canvas {
-    border: 2px solid #ddd;
     display: block;
     margin: auto;
+    border: 2px solid #ddd;
+    background: #fff;
   }
 
   #progress {
     height: 10px;
     background: #ddd;
-    margin-top: 6px;
     border-radius: 5px;
+    margin-top: 8px;
     overflow: hidden;
   }
 
@@ -47,13 +49,13 @@
 
   #feedback {
     text-align: center;
-    margin-top: 6px;
+    margin-top: 8px;
     font-weight: bold;
-    min-height: 20px;
+    min-height: 22px;
   }
 
-  .success { color: green; }
-  .error { color: orange; }
+  .success { color: #2e7d32; }
+  .error { color: #ef6c00; }
 </style>
 </head>
 
@@ -68,33 +70,24 @@
 
 <script>
 /* =====================
-   КОНФИГУРАЦИЯ ИГРЫ
-   (будущий редактор)
+   КОНФИГУРАЦИЯ
 ===================== */
 
 const GAME_CONFIG = {
   taskText: "Собери только существительные",
 
-  correctItems: [
-    { label: "стол" },
-    { label: "дом" },
-    { label: "окно" }
-  ],
-
-  wrongItems: [
-    { label: "бежать" },
-    { label: "красивый" }
-  ],
+  correctItems: ["стол", "дом", "окно", "книга"],
+  wrongItems: ["бежать", "красивый", "думать"],
 
   gameplay: {
-    speed: 20,
+    speed: 160,
     snakeGrowth: true,
-    elementsOnField: 6,
+    elementsOnField: 7,
     noPenaltyMode: true
   },
 
   progress: {
-    requiredCorrect: 5
+    requiredCorrect: 6
   },
 
   ui: {
@@ -103,20 +96,28 @@ const GAME_CONFIG = {
 
   feedback: {
     successText: ["Верно!", "Отлично!", "Молодец!"],
-    errorText: ["Попробуй ещё", "Подумай"]
+    errorText: ["Подумай ещё", "Попробуй снова"]
   }
 };
 
 /* =====================
-   ИНИЦИАЛИЗАЦИЯ
+   ПЕРЕМЕННЫЕ
 ===================== */
 
 const canvas = document.getElementById("gameCanvas");
 const ctx = canvas.getContext("2d");
 document.getElementById("task").innerText = GAME_CONFIG.taskText;
 
-let snake = [{ x: 100, y: 100 }];
-let direction = { x: 20, y: 0 };
+const CELL = 20;
+const COLS = canvas.width / CELL;
+const ROWS = canvas.height / CELL;
+
+let snake = [{ x: 5, y: 5 }];
+let snakeLength = 1;
+
+let direction = "RIGHT";
+let nextDirection = "RIGHT";
+
 let items = [];
 let correctCollected = 0;
 
@@ -125,30 +126,95 @@ let correctCollected = 0;
 ===================== */
 
 document.addEventListener("keydown", e => {
-  if (e.key === "ArrowUp") direction = { x: 0, y: -20 };
-  if (e.key === "ArrowDown") direction = { x: 0, y: 20 };
-  if (e.key === "ArrowLeft") direction = { x: -20, y: 0 };
-  if (e.key === "ArrowRight") direction = { x: 20, y: 0 };
+  if (e.key === "ArrowUp" && direction !== "DOWN") nextDirection = "UP";
+  if (e.key === "ArrowDown" && direction !== "UP") nextDirection = "DOWN";
+  if (e.key === "ArrowLeft" && direction !== "RIGHT") nextDirection = "LEFT";
+  if (e.key === "ArrowRight" && direction !== "LEFT") nextDirection = "RIGHT";
 });
 
 /* =====================
-   ЭЛЕМЕНТЫ
+   СПАВН ЭЛЕМЕНТОВ
 ===================== */
 
 function spawnItems() {
   items = [];
   const all = [
-    ...GAME_CONFIG.correctItems.map(i => ({ ...i, correct: true })),
-    ...GAME_CONFIG.wrongItems.map(i => ({ ...i, correct: false }))
+    ...GAME_CONFIG.correctItems.map(t => ({ text: t, correct: true })),
+    ...GAME_CONFIG.wrongItems.map(t => ({ text: t, correct: false }))
   ];
 
-  for (let i = 0; i < GAME_CONFIG.gameplay.elementsOnField; i++) {
+  while (items.length < GAME_CONFIG.gameplay.elementsOnField) {
     const item = all[Math.floor(Math.random() * all.length)];
-    items.push({
-      ...item,
-      x: Math.floor(Math.random() * 28) * 20,
-      y: Math.floor(Math.random() * 18) * 20
-    });
+    const pos = {
+      x: Math.floor(Math.random() * COLS),
+      y: Math.floor(Math.random() * ROWS)
+    };
+
+    if (!items.some(i => i.x === pos.x && i.y === pos.y)) {
+      items.push({ ...item, ...pos });
+    }
+  }
+}
+
+/* =====================
+   ДВИЖЕНИЕ ЗМЕЙКИ
+===================== */
+
+function moveSnake() {
+  direction = nextDirection;
+  const head = { ...snake[0] };
+
+  if (direction === "UP") head.y--;
+  if (direction === "DOWN") head.y++;
+  if (direction === "LEFT") head.x--;
+  if (direction === "RIGHT") head.x++;
+
+  // мягкие границы
+  if (head.x < 0) head.x = COLS - 1;
+  if (head.y < 0) head.y = ROWS - 1;
+  if (head.x >= COLS) head.x = 0;
+  if (head.y >= ROWS) head.y = 0;
+
+  snake.unshift(head);
+  while (snake.length > snakeLength) snake.pop();
+}
+
+/* =====================
+   СБОР ЭЛЕМЕНТОВ
+===================== */
+
+function checkCollision() {
+  const head = snake[0];
+
+  items.forEach((item, index) => {
+    if (head.x === item.x && head.y === item.y) {
+
+      if (item.correct) {
+        snakeLength++;
+        correctCollected++;
+        showFeedback(true);
+      } else {
+        showFeedback(false);
+      }
+
+      items.splice(index, 1);
+    }
+  });
+}
+
+/* =====================
+   ПРОГРЕСС
+===================== */
+
+function updateProgress() {
+  const percent =
+    (correctCollected / GAME_CONFIG.progress.requiredCorrect) * 100;
+
+  document.getElementById("progress-bar").style.width = percent + "%";
+
+  if (percent >= 100) {
+    alert("🎉 Задание выполнено!");
+    resetGame();
   }
 }
 
@@ -169,80 +235,37 @@ function showFeedback(success) {
 }
 
 /* =====================
-   ПРОГРЕСС
-===================== */
-
-function updateProgress() {
-  const percent =
-    (correctCollected / GAME_CONFIG.progress.requiredCorrect) * 100;
-
-  document.getElementById("progress-bar").style.width = percent + "%";
-
-  if (percent >= 100) {
-    alert("🎉 Задание выполнено!");
-    resetGame();
-  }
-}
-
-/* =====================
-   СТОЛКНОВЕНИЯ
-===================== */
-
-function checkCollision() {
-  const head = snake[0];
-
-  items.forEach((item, index) => {
-    if (head.x === item.x && head.y === item.y) {
-      if (item.correct) {
-        correctCollected++;
-        showFeedback(true);
-        if (GAME_CONFIG.gameplay.snakeGrowth) {
-          snake.push({ ...snake[snake.length - 1] });
-        }
-      } else {
-        showFeedback(false);
-      }
-      items.splice(index, 1);
-    }
-  });
-}
-
-/* =====================
    ОТРИСОВКА
 ===================== */
 
 function draw() {
   ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-  // змейка
-  ctx.fillStyle = "green";
-  snake.forEach(seg => ctx.fillRect(seg.x, seg.y, 18, 18));
-
   // элементы
   items.forEach(item => {
-    ctx.fillStyle = item.correct ? "#4caf50" : "#999";
-    ctx.fillRect(item.x, item.y, 18, 18);
+    ctx.fillStyle = item.correct ? "#81c784" : "#bdbdbd";
+    ctx.fillRect(item.x * CELL, item.y * CELL, CELL - 2, CELL - 2);
 
     if (!GAME_CONFIG.ui.noTextMode) {
       ctx.fillStyle = "#000";
-      ctx.fillText(item.label, item.x, item.y - 4);
+      ctx.font = "12px Arial";
+      ctx.fillText(item.text, item.x * CELL, item.y * CELL - 2);
     }
+  });
+
+  // змейка
+  ctx.fillStyle = "#4caf50";
+  snake.forEach(seg => {
+    ctx.fillRect(seg.x * CELL, seg.y * CELL, CELL - 2, CELL - 2);
   });
 }
 
 /* =====================
-   ИГРОВОЙ ЦИКЛ
+   ЦИКЛ ИГРЫ
 ===================== */
 
 function gameLoop() {
-  const head = {
-    x: snake[0].x + direction.x,
-    y: snake[0].y + direction.y
-  };
-
-  snake.unshift(head);
-  snake.pop();
-
+  moveSnake();
   checkCollision();
   updateProgress();
   draw();
@@ -253,7 +276,8 @@ function gameLoop() {
 ===================== */
 
 function resetGame() {
-  snake = [{ x: 100, y: 100 }];
+  snake = [{ x: 5, y: 5 }];
+  snakeLength = 1;
   correctCollected = 0;
   spawnItems();
 }
@@ -264,7 +288,6 @@ function resetGame() {
 
 spawnItems();
 setInterval(gameLoop, GAME_CONFIG.gameplay.speed);
-
 </script>
 
 </body>
