--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 body { font-family: Arial, sans-serif; background:#f2f2f2; }
 
 #game-wrapper {
-  width: 680px;
+  width: 700px;
   margin: 20px auto;
   background:#fff;
   padding:12px;
@@ -19,11 +19,22 @@ h2 { text-align:center; margin:6px 0; }
 
 #editor {
   border:1px solid #ddd;
-  padding:8px;
+  padding:10px;
   margin-bottom:10px;
 }
 
-textarea { width:100%; height:50px; }
+label { font-weight:bold; display:block; margin-top:6px; }
+
+textarea, input {
+  width:100%;
+  margin-top:4px;
+}
+
+button {
+  margin-top:8px;
+  padding:6px 14px;
+  cursor:pointer;
+}
 
 canvas {
   display:block;
@@ -34,25 +45,33 @@ canvas {
 #progress { height:10px; background:#ddd; margin-top:8px; }
 #progress-bar { height:100%; width:0%; background:#4caf50; }
 
-#feedback { text-align:center; font-weight:bold; min-height:20px; }
+#feedback {
+  text-align:center;
+  font-weight:bold;
+  min-height:22px;
+}
 .success { color:green; }
 .error { color:orange; }
+.fail { color:#c62828; }
 </style>
 </head>
 
 <body>
 
 <div id="game-wrapper">
-  <h2>Собери только существительные</h2>
+  <h2 id="taskTitle">Собери только существительные</h2>
 
+  <!-- РЕДАКТОР -->
   <div id="editor">
-    <b>Правильные слова</b>
-    <textarea id="correctInput">стол, дом, окно, книга</textarea>
+    <label>Вопрос / задание</label>
+    <input id="taskInput" value="Собери только существительные">
 
-    <b>Неправильные слова</b>
-    <textarea id="wrongInput">бежать, красивый</textarea>
+    <label>Правильные слова (через запятую)</label>
+    <textarea id="correctInput">стол, дом, окно, книга, молоко</textarea>
 
-    <br><br>
+    <label>Неправильные слова</label>
+    <textarea id="wrongInput">бежать, красивый, важный</textarea>
+
     <button id="startBtn">▶ Играть</button>
   </div>
 
@@ -64,15 +83,22 @@ canvas {
 
 <script>
 /* =====================
+   ПАРАМЕТРЫ
+===================== */
+
+const SEGMENT_STEP = 12;
+const MOVE_SPEED = 2;
+const REQUIRED = 6;
+
+/* =====================
    ПЕРЕМЕННЫЕ
 ===================== */
 
 const canvas = document.getElementById("gameCanvas");
 const ctx = canvas.getContext("2d");
 
-let path = [];          // путь змейки
-let maxLength = 20;     // длина пути (ВИДИМАЯ)
-let speed = 2;
+let path = [];
+let maxLength = 24;
 
 let target = null;
 let items = [];
@@ -96,10 +122,13 @@ canvas.addEventListener("click", e => {
 
 document.getElementById("startBtn").onclick = () => {
   CONFIG = {
+    task: document.getElementById("taskInput").value,
     correct: document.getElementById("correctInput").value.split(",").map(s=>s.trim()),
-    wrong: document.getElementById("wrongInput").value.split(",").map(s=>s.trim()),
-    required: 5
+    wrong: document.getElementById("wrongInput").value.split(",").map(s=>s.trim())
   };
+
+  document.getElementById("taskTitle").innerText = CONFIG.task;
+
   resetGame();
   gameRunning = true;
 };
@@ -126,22 +155,22 @@ function ensureItems() {
 }
 
 /* =====================
-   ДВИЖЕНИЕ (ПУТЬ!)
+   ДВИЖЕНИЕ
 ===================== */
 
 function moveSnake() {
   if (!target || path.length === 0) return;
 
   const head = path[0];
-  const dx = target.x - head.x;
-  const dy = target.y - head.y;
+  const dx = target.x-head.x;
+  const dy = target.y-head.y;
   const d = Math.sqrt(dx*dx + dy*dy);
 
   if (d < 1) return;
 
   const newHead = {
-    x: head.x + (dx/d)*speed,
-    y: head.y + (dy/d)*speed
+    x: head.x + (dx/d)*MOVE_SPEED,
+    y: head.y + (dy/d)*MOVE_SPEED
   };
 
   path.unshift(newHead);
@@ -149,10 +178,26 @@ function moveSnake() {
 }
 
 /* =====================
+   САМОПЕРЕСЕЧЕНИЕ
+===================== */
+
+function checkSelfCollision() {
+  const head = path[0];
+  for (let i = 8; i < path.length; i++) {
+    const dx = head.x - path[i].x;
+    const dy = head.y - path[i].y;
+    if (Math.sqrt(dx*dx + dy*dy) < 6) {
+      gameRunning = false;
+      showFail("Змейка запуталась 🌀");
+    }
+  }
+}
+
+/* =====================
    СБОР
 ===================== */
 
-function checkCollision() {
+function checkItemCollision() {
   const head = path[0];
   items.forEach((item,i)=>{
     const dx=head.x-item.x;
@@ -160,7 +205,7 @@ function checkCollision() {
     if (Math.sqrt(dx*dx+dy*dy) < 14) {
       if (item.correct) {
         correctCount++;
-        maxLength *= 2;   // 🔥 ВОТ ЗДЕСЬ РЕАЛЬНЫЙ РОСТ ×2
+        maxLength += SEGMENT_STEP;
         showFeedback(true);
       } else {
         showFeedback(false);
@@ -175,8 +220,8 @@ function checkCollision() {
 ===================== */
 
 function updateProgress() {
-  const p = Math.min(correctCount/CONFIG.required*100,100);
-  document.getElementById("progress-bar").style.width=p+"%";
+  const p = Math.min(correctCount / REQUIRED * 100, 100);
+  document.getElementById("progress-bar").style.width = p + "%";
 }
 
 /* =====================
@@ -184,10 +229,16 @@ function updateProgress() {
 ===================== */
 
 function showFeedback(ok) {
-  const f=document.getElementById("feedback");
+  const f = document.getElementById("feedback");
   f.innerText = ok ? "Верно!" : "Подумай ещё";
   f.className = ok ? "success" : "error";
   setTimeout(()=>f.innerText="",600);
+}
+
+function showFail(text) {
+  const f = document.getElementById("feedback");
+  f.innerText = text;
+  f.className = "fail";
 }
 
 /* =====================
@@ -199,13 +250,13 @@ function draw() {
 
   // элементы
   items.forEach(it=>{
-    ctx.fillStyle=it.correct?"#66bb6a":"#bdbdbd";
+    ctx.fillStyle = it.correct ? "#66bb6a" : "#bdbdbd";
     ctx.fillRect(it.x-8,it.y-8,16,16);
     ctx.fillStyle="#000";
     ctx.fillText(it.text,it.x-10,it.y-12);
   });
 
-  // змейка (ПУТЬ!)
+  // змейка
   ctx.strokeStyle="#4caf50";
   ctx.lineWidth=6;
   ctx.beginPath();
@@ -223,7 +274,8 @@ function draw() {
 function loop() {
   if (gameRunning) {
     moveSnake();
-    checkCollision();
+    checkItemCollision();
+    checkSelfCollision();
     ensureItems();
     updateProgress();
   }
@@ -237,7 +289,7 @@ function loop() {
 
 function resetGame() {
   path = [{ x:50, y:50 }];
-  maxLength = 20;
+  maxLength = 24;
   correctCount = 0;
   items = [];
   target = null;
